# threat-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  malicious_events.sh
agent/: CMakeLists.txt  config.hpp.in  main.cpp  tables_structure.pgsql
agent/include/: agentDatabase.hpp  conversion.hpp  parse.hpp
agent/src/: agentDatabase.cpp  conversion.cpp  parse.cpp
docs/: CMakeLists.txt
monitor/: CMakeLists.txt  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
server/: CMakeLists.txt  config.hpp.in  main.cpp
server/include/: arima.hpp  database.hpp  mlp.hpp
server/src/: arima.cpp  database.cpp  mlp.cpp
tests/: CMakeLists.txt
tests/src/: agent_test.cpp  server_test.cpp
